k8s-specifications/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - result.devopsintheclouds.com
      secretName: result-tls
    - hosts:
        - vote.devopsintheclouds.com
      secretName: vote-tls      
  rules:
  - host: result.devopsintheclouds.com
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: result
              port:
                number: 80
  - host: vote.devopsintheclouds.com
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: vote
              port:
                number: 80
